[tool.poetry]
name = "client-sdk-python-signer"
version = "0.0.0"
description = ""
authors = ["Momento <hello@momentohq.com>"]
readme = "README.md"
packages = [{include = "client_sdk_python_signer"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-sugar = "^0.9.6"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.0"
mypy = "^0.991"
types-setuptools = "^65.7.0.3"


[tool.poetry.group.format.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.7"

# Increase our expectations

check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_defs       = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

# These are too strict for us at the moment

disallow_any_decorated      = true
disallow_any_explicit       = true
disallow_any_expr           = true
disallow_any_generics       = true
disallow_any_unimported     = false
disallow_subclassing_any    = false
disallow_untyped_calls      = true
disallow_untyped_decorators = true
strict_equality             = true

[tool.black]
line-length = 120
target-version = ["py37"]
include = "\\.pyi?$"
exclude = """
/(
  \\.git
  | \\.mypy_cache
  | \\.pytest_cache
  | \\.venv
  | dist
)
"""

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
