[tool.poetry]
name = "client-sdk-python-signer"
version = "0.0.0"

authors = ["Momento <hello@momentohq.com>"]
description = "Signer SDK for Momento"

license = "Apache-2.0"

documentation = "https://docs.momentohq.com/"
homepage = "https://gomomento.com"
readme = "README.md"
repository = "https://github.com/momentohq/client-sdk-python-signer"

keywords = ["Momento", "caching", "key-value store", "serverless"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Framework :: AsnycIO",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Internet",
  "Natural Language :: English",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
momento = {path = "../client-sdk-python", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-sugar = "^0.9.6"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.0"
mypy = "^0.991"
types-setuptools = "^65.7.0.3"


[tool.poetry.group.format.dependencies]
black = "^22.12.0"
isort = "^5.11.4"


[tool.poetry.group.codegen.dependencies]
libcst = "^0.4.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.7"

# Increase our expectations

check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_defs       = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

# These are too strict for us at the moment

disallow_any_decorated      = true
disallow_any_explicit       = true
disallow_any_expr           = true
disallow_any_generics       = true
disallow_any_unimported     = false
disallow_subclassing_any    = false
disallow_untyped_calls      = true
disallow_untyped_decorators = true
strict_equality             = true

[[tool.mypy.overrides]]
module = "client_sdk_python_signer.internal.aio._scs_control_client"
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "client_sdk_python_signer.responses.control.signing_keys"
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "client_sdk_python_signer.simple_cache_client_async"
disallow_any_expr = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "client_sdk_python_signer.simple_cache_client"
disallow_any_expr = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "client_sdk_python_signer.momento_signer"
disallow_any_expr = false

[[tool.mypy.overrides]]
module = [
    "grpc.aio.*",  # https://github.com/shabbyrobe/grpc-stubs/issues/22
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "momento.*"
disallow_any_expr           = false


[tool.black]
line-length = 120
target-version = ["py37"]
include = "\\.pyi?$"
exclude = """
/(
  \\.git
  | \\.mypy_cache
  | \\.pytest_cache
  | \\.venv
  | dist
)
"""

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
